# Seminar1

./: BinaryTree.c  BinaryTree.h  CMakeLists.txt  Dockerfile  Lab1  Node.c  Node.h  Person.c  Person.h  README.md  ex1_private.c  ex1_private.h  ex2_private.c  ex2_private.h  ex3_private.c  ex3_private.h  exercises.c  exercises.h  funcs.c  funcs.h  functions.c  functions.h  helpers_funcs.c  helpers_funcs.h  includes.h  lab2  main.c  persons.txt  struct.h
Sem1/: CMakeLists.txt  Task.txt  app  defines.h  functions.c  functions.h  main.c  struct.h
